--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@reach/router": "^1.2.1",
+    "cheerio": "^1.0.0-rc.3",
     "connect-ensure-login": "^0.1.1",
     "core-js": "^3.3.6",
     "dotenv": "^8.2.0",
@@ -32,6 +33,8 @@
     "react-dom": "^16.7.0",
     "react-google-login": "^5.0.7",
     "react-router-dom": "^4.3.1",
+    "request": "^2.88.0",
+    "request-promise-native": "^1.0.8",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
     "url-loader": "^1.1.2"
